# clapper

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  README.md  data.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy.yml  deploy_pypi.yml  doc-preview.yaml  doc-preview.yml  qa.yml  tests.yaml  tests.yml
.reuse/: dep5
LICENSES/: BSD-3-Clause.txt
doc/: api.rst  catalog.json  click.rst  conf.py  config.rst  example_alias.py  example_cli.py  example_config.py  example_defaults.py  example_logging.py  example_options.py  index.rst  install.rst  links.rst  logging.rst  nitpick-exceptions.txt  rc.rst
doc/data/: basic_config.py  second_config.py
doc/fixes/: click.inv  click.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_ac5b4134e26adf6e_click_py.html  z_ac5b4134e26adf6e_config_py.html  z_ac5b4134e26adf6e_logging_py.html  z_ac5b4134e26adf6e_rc_py.html
src/clapper/: click.py  config.py  logging.py  rc.py
tests/: conftest.py  test_click.py  test_config.py  test_logging.py  test_rc.py
tests/data/: basic_config.py  complex.py  oldjson.cfg  test_dump_config.py  test_dump_config2.py  userdefaults_ex1.cfg
